--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <title>Teste ReactJS</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins:wght@400;700&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Questrial&display=swap"
     rel="stylesheet">
 </head>
 
